tests/positive/QualifiedSymbol/M.juvix
module M;

module N;
  module O;
    axiom
    A : Type;
  end;
end;

open N;

module O;
  
end;

axiom
B : O.A;
