tests/negative/AmbiguousSymbol.juvix
module AmbiguousSymbol;

  axiom A : Type;

  module O;
    type T := A : T;
  end;
  open O;

  module M;
    axiom A : Type;
  end;
  open M;

  axiom B : A;
end;
